@@ -8,6 +8,13 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added Krang::Story->preview_version(), Krang::Media->preview_version
+and Krang::ElementClass::TopLevel->force_republish() in anticipation
+of forthcoming improvements to the publishing system. [Peter]
+
+
+=item *
+
 Upgraded XML::Validator::Schema to the latest release, 1.06. [Sam]
 
 =item *
